--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intellij-idea-keymap",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "Jetbrains IntelliJ IDEA based key bindings",
   "keywords": [
     "Jetbrains",
@@ -8,7 +8,7 @@
     "IDEA",
     "keymap"
   ],
-  "repository": "https://github.com/atom/intellij-idea-keymap",
+  "repository": "https:/github.com/guylabs/intellij-idea-keymap",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
